updates for mobile nav and secondary nav

--- a/index.html
+++ b/index.html
@@ -707,8 +707,7 @@
                                             <i class="mega-nav__item__link__carrot"></i>
                                         </button>
                                         <div class="mega-nav__dropdown">
-                                            <ul
-                                                class="mega-nav__dropdown__items mega-nav__dropdown__items--column-link-list mega-nav__dropdown__items--multi-column-link-list">
+                                            <ul class="mega-nav__dropdown__items mega-nav__dropdown__items--column-link-list">
                                                 <li class="mega-nav__dropdown__item">
                                                     <a class="mega-nav__dropdown__item__link"
                                                         href="/en/industries/alternatives"
@@ -738,6 +737,8 @@
                                                         href="/en/industries/government"
                                                         title="Government">Government</a>
                                                 </li>
+                                            </ul>
+                                            <ul class="mega-nav__dropdown__items mega-nav__dropdown__items--column-link-list">
                                                 <li class="mega-nav__dropdown__item">
                                                     <a class="mega-nav__dropdown__item__link"
                                                         href="/en/industries/healthcare"
@@ -767,6 +768,8 @@
                                                         href="/en/industries/life-sciences" title="Life sciences">Life
                                                         sciences</a>
                                                 </li>
+                                            </ul>
+                                            <ul class="mega-nav__dropdown__items mega-nav__dropdown__items--column-link-list">
                                                 <li class="mega-nav__dropdown__item">
                                                     <a class="mega-nav__dropdown__item__link"
                                                         href="/en/industries/multifamily"
@@ -785,6 +788,9 @@
                                                         href="/en/industries/self-storage" title="Self storage">Self
                                                         storage</a>
                                                 </li>
+
+                                            </ul>
+                                            <ul class="mega-nav__dropdown__items mega-nav__dropdown__items--column-link-list">
                                                 <li class="mega-nav__dropdown__item">
                                                     <a class="mega-nav__dropdown__item__link"
                                                         href="/en/industries/seniors-housing"
@@ -800,7 +806,6 @@
                                                         href="/en/industries/sports-and-entertainment"
                                                         title="Sports and entertainment">Sports and entertainment</a>
                                                 </li>
-
                                             </ul>
                                         </div>
                                     </li>
@@ -835,8 +840,11 @@
                                             </ul>
                                             <div class="mega-nav__col">
                                                 <div class="mega-nav__featured">
-                                                    <img class="mega-nav__featured__img"
-                                                        src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                    <div class="mega-nav__featured__img--wrapper">
+                                                        <img class="mega-nav__featured__img"
+                                                            src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                        <span class="mega-nav__featured__img--call-out">Featured</span>
+                                                    </div>
                                                     <p class="mega-nav__featured__title">New JLL Technologies group to
                                                         be led by Mihir Shah and Yishai Lerner</p>
                                                     <a class="mega-nav__featured__link" href="#">
@@ -847,8 +855,11 @@
                                             </div>
                                             <div class="mega-nav__col">
                                                 <div class="mega-nav__featured">
-                                                    <img class="mega-nav__featured__img"
-                                                        src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                    <div class="mega-nav__featured__img--wrapper">
+                                                        <img class="mega-nav__featured__img"
+                                                            src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                        <span class="mega-nav__featured__img--call-out">Featured</span>
+                                                    </div>
                                                     <p class="mega-nav__featured__title">New JLL Technologies group to
                                                         be led by Mihir Shah and Yishai Lerner</p>
                                                     <a class="mega-nav__featured__link" href="#">
@@ -890,8 +901,11 @@
                                             </ul>
                                             <div class="mega-nav__col">
                                                 <div class="mega-nav__featured">
-                                                    <img class="mega-nav__featured__img"
-                                                        src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                    <div class="mega-nav__featured__img--wrapper">
+                                                        <img class="mega-nav__featured__img"
+                                                            src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                        <span class="mega-nav__featured__img--call-out">Featured</span>
+                                                    </div>
                                                     <p class="mega-nav__featured__title">New JLL Technologies group to
                                                         be led by Mihir Shah and Yishai Lerner</p>
                                                     <a class="mega-nav__featured__link" href="#">
@@ -902,11 +916,13 @@
                                             </div>
                                             <div class="mega-nav__col">
                                                 <div class="mega-nav__featured">
-                                                    <img class="mega-nav__featured__img"
-                                                        src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                    <div class="mega-nav__featured__img--wrapper">
+                                                        <img class="mega-nav__featured__img"
+                                                            src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                        <span class="mega-nav__featured__img--call-out">Featured</span>
+                                                    </div>
                                                     <p class="mega-nav__featured__title">New JLL Technologies group to
                                                         be led by Mihir Shah and Yishai Lerner</p>
-                                                    <a class="mega-nav__featured__link" href="#">Learn More</a>
                                                     <a class="mega-nav__featured__link" href="#">
                                                         Learn More
                                                         <i class="mega-nav__featured__link--carrot"></i>
@@ -922,7 +938,7 @@
                                     <li class="secondary-nav__item">
                                         <a class="secondary-nav__item__link" href="#">Careers</a>
                                     </li>
-                                    <li class="secondary-nav__item secondary-nav__item--dropdown">
+                                    <li class="secondary-nav__item secondary-nav__item--dropdown" data-base-offset="-80">
                                         <a class="secondary-nav__item__link" href="#">
                                             <span>About us</span>
                                             <i class="secondary-nav__item__link--carrot"></i>
@@ -950,8 +966,11 @@
                                             </ul>
                                             <div class="secondary-nav__col">
                                                 <div class="secondary-nav__featured">
-                                                    <img class="secondary-nav__featured__img"
-                                                        src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                    <div class="mega-nav__featured__img--wrapper">
+                                                        <img class="mega-nav__featured__img"
+                                                            src="https://www.us.jll.com/content/dam/jll-com/images/news/new-jll-technologies-group-to-be-led-by-mihir-shah-and-yishai-lerner.jpg/jcr:content/renditions/cq5dam.web.800.800.jpeg">
+                                                        <span class="mega-nav__featured__img--call-out">Featured</span>
+                                                    </div>
                                                     <p class="secondary-nav__featured__title">New JLL Technologies group to
                                                         be led by Mihir Shah and Yishai Lerner</p>
                                                     <a class="secondary-nav__featured__link" href="#">
